Remove catch Throwable to expose Error